Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110440

Qt Designer: Items just added to scratch pad are not visible on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.4.3, 6.5.0, 6.6.0
    • 6.4.0
    • Tools: Designer
    • None
    • Windows
    • 4310d99be (dev), 877fcb0ee (6.5), 6aa7f6844 (6.4)

    Description

      Note: bug affects Windows only (worked on Linux). Tested on Qt Creator 9.0.1 built with Qt 6.4.0.

      Sequence:

      1. Open a .ui file in Design mode (I used the Calculator Form Example project).
      2. Drag a widget from the form to the widget box on the left to add it to the scratch pad. The first widget shows up just fine.
      3. Drag a second widget to the scratch pad.

      Issue: the second widget is not visible.

      Here is a screenshot. There should be two items in the Scratchpad currently:

       

      Workaround is to collapse and expand the Scratchpad box. After that the second widget becomes visible as well:

       

      Attachments

        For Gerrit Dashboard: QTBUG-110440
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            karmo Karmo Kuurberg
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes