Qt Designer: Ensure newly added scratch pad items become visible

Force a re-layout of the widget box tree containing the nested
category list widgets and scroll up.

Fixes: QTBUG-110440
Change-Id: I1161e09e6ff074974e6bc094a9d73ef68c58f13a
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 4310d99bee0577b4677ed4dc34c192d36fa1df3b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>